--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
           Vendas
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/">Nova produto</a>
+          <a class="dropdown-item" href="/cadVenda">Nova venda</a>
           <a class="dropdown-item" href="#">Lista</a>
         </div>
       </div>
