--- a/public/cadVenda.html
+++ b/public/cadVenda.html
@@ -23,112 +23,145 @@
     img {
       border-radius: 50%;
     }
-    .button2:hover {
-  background-color: #008CBA;
-  color: white;
-}
-    .tarefa {
-            background: blue;
-            width: 20%;
-            min-height: 230px;
-            align-items: center;
-            margin-top: 10%;
-            background-image: linear-gradient(#bb7ab3, #3b3175);
-            background: black;
-        }
-        .form {
-            text-align: center;
-            padding-top: 4%;
-        }
-        .lbl {
-            margin-top: 4px;
-            font-weight: bold;
-            color:white;
-        }
-        .salvar {
-            margin-top: 10%;
-            float: right;
-            
-        }
-        .butao {
-            border-radius: 10px;
-            font-weight: bold;
-            display: inline-block;
-  text-align: center;
-  transition: all 1s;
-  cursor: pointer;
-  margin-top: 7%;
 
-        }
-        .msg {
-            text-align: center;
-            height: 50px;
-            width: 20%;
-            margin-top: 2%;
-            margin-left: 46.5%;
-            font-size: 24px;
-            visibility: hidden;
-            font-weight: bold;
-        }
-        .button {
-  background-color: white; /* Green */
-  border-color: #008CBA;
-  color: black;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-.adc {
-    float: left;
-    margin-left: 25%;
-}
-.qtd {
-    float: left;
-    margin-left: 3%;
-}
-.bot {
-    float: left;
-    margin-left: 3%;
-}
-.btn:hover {
-    border-color: #008CBA
-}
-.pesq {
-    width: 200px;
-}
-.prod {
-    float: left;
-    width: 25%;
-    margin-left: 18%;
-    margin-top: 3%;
-    border: 1px solid black
-}
-.quantidade {
-    float: left;
-    width: 20%;
-    margin-top: 3%;
-    border: 1px solid black
-}
-.home {
-    text-align: initial;
-}
-.valor {
-    float: left;
-    width: 20%;
-    margin-top: 3%;
-    border: 1px solid black
-}
-.top {
-    margin-left: 2%;
-}
-.vish {
-    border: 1px solid black;
-}
+    .button2:hover {
+      background-color: #008CBA;
+      color: white;
+    }
+
+    .tarefa {
+      background: blue;
+      width: 20%;
+      min-height: 230px;
+      align-items: center;
+      margin-top: 10%;
+      background-image: linear-gradient(#bb7ab3, #3b3175);
+      background: black;
+    }
+
+    .form {
+      text-align: center;
+      padding-top: 4%;
+    }
+
+    .lbl {
+      margin-top: 4px;
+      font-weight: bold;
+      color: white;
+    }
+
+    .salvar {
+      margin-top: 10%;
+      float: right;
+
+    }
+
+    .butao {
+      border-radius: 10px;
+      font-weight: bold;
+      display: inline-block;
+      text-align: center;
+      transition: all 1s;
+      cursor: pointer;
+      margin-top: 7%;
+
+    }
+
+    .msg {
+      text-align: center;
+      height: 50px;
+      width: 20%;
+      margin-top: 2%;
+      margin-left: 46.5%;
+      font-size: 24px;
+      visibility: hidden;
+      font-weight: bold;
+    }
+
+    .button {
+      background-color: white;
+      /* Green */
+      border-color: #008CBA;
+      color: black;
+      padding: 16px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      transition-duration: 0.4s;
+      cursor: pointer;
+    }
+
+    .adc {
+      float: left;
+      margin-left: 25%;
+    }
+
+    .qtd {
+      float: left;
+      margin-left: 3%;
+    }
+
+    .bot {
+      float: left;
+      margin-left: 3%;
+    }
+
+    .btn:hover {
+      border-color: #008CBA
+    }
+
+    .pesq {
+      width: 200px;
+    }
+
+    .prod {
+      float: left;
+      width: 25%;
+      margin-left: 18%;
+      margin-top: 3%;
+      border: 1px solid black
+    }
+
+    .quantidade {
+      float: left;
+      width: 20%;
+      margin-top: 3%;
+      border: 1px solid black
+    }
+
+    .home {
+      text-align: initial;
+    }
+
+    .valor {
+      float: left;
+      width: 20%;
+      margin-top: 3%;
+      border: 1px solid black
+    }
+
+    .top {
+      margin-left: 2%;
+    }
+
+    .vish {
+      border: 1px solid black;
+    }
+
+    .texto {
+      padding-left: 5px;
+    }
+
+    .finalizar {
+      position: absolute;
+      bottom: 100px;
+      right: 100px;
+      border-color: black;
+
+      font-size: 18px;
+    }
   </style>
 </head>
 
@@ -145,29 +178,29 @@
         <img src="rato.png" alt="homem" width="200" height="180">
       </div>
       <div class="list-group list-group-flush itens">
-          <div class="dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Vendas
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/">Nova produto</a>
-          <a class="dropdown-item" href="#">Lista</a>
+        <div class="dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Vendas
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/">Nova produto</a>
+            <a class="dropdown-item" href="#">Lista</a>
+          </div>
         </div>
-      </div>
 
         <!-- Mudar o id da navbra-->
-    <div class="dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarProduto" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Produtos
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProduto">
-          <a class="dropdown-item" href="/cadProduto">Novuto</a>
-          <a class="dropdown-item" href="#">Lista</a>
+        <div class="dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarProduto" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Produtos
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProduto">
+              <a class="dropdown-item" href="/cadProduto">Novuto</a>
+              <a class="dropdown-item" href="#">Lista</a>
+            </div>
         </div>
       </div>
     </div>
-  </div>
     <!-- /#sidebar-wrapper -->
 
     <!-- Page Content -->
@@ -185,63 +218,124 @@
       </nav>
 
       <div class="container-fluid home">
-          <div class="adc">
-            <input type="number" class="pesq"id="pesq" name="pesq" placeholder="ID" min='1' max='99999'><br>
-          </div>
-          <div class="qtd">
-                <input type="number" class="quant" name="qtd" placeholder="quant" min='1' max='99999'><br>
-          </div>
-          <div class="bot">
-                <button type="button" class="btn btn-default btn-sm">ADD</button>
-          </div>
-            <div id='prod'class='prod'>
-                <span class='top'>Produto</span>
-            </div>
-            <div id='quant'class='quantidade'>
-                <span class='top'>Quant</span>
-            </div>
-            <div id='valor'class='valor'>
-                <span class='top'>Valor</span>
-            </div>
-                </div>
-            </div>
+        <div class="adc">
+          <input type="number" class="pesq" id="pesq" name="pesq" placeholder="ID" min='1' max='99999'><br>
+        </div>
+        <div class="qtd">
+          <input type="number" class="quant" id='qtd' name="qtd" placeholder="quant" min='1' max='99999'><br>
+        </div>
+        <div class="bot">
+          <button type="button" class="btn btn-default btn-sm" onclick="adicionar()">ADD</button>
+        </div>
+        <div id='prod' class='prod'>
+          <span class='top'>Produto</span>
+        </div>
+        <div id='quant' class='quantidade'>
+          <span class='top'>Quant</span>
+        </div>
+        <div id='valor' class='valor'>
+          <span class='top'>Valor</span>
+        </div>
+      </div>
+      <div class='salvar'>
+        <button type="button" class="finalizar btn btn-default btn-sm" onclick="finalizar()">Finalizar</button>
       </div>
     </div>
-    <!-- /#page-content-wrapper -->
+  </div>
+  </div>
+  <!-- /#page-content-wrapper -->
 
   </div>
   <!-- /#wrapper -->
+</body>
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Menu Toggle Script -->
-  <script>
-    $("#menu-toggle").click(function (e) {
-      e.preventDefault();
-      $("#wrapper").toggleClass("toggled");
-    });
-
-    function adicionar() {
-        // adicionar o id posto na url pra pegar o prod do banco
-        let divProd = document.getElementById('prod')
-        let divQuant = document.getElementById('quant')
-        let divValor = document.getElementById('valor')
-        console.log('Getting...');
-let url = 'http://localhost/produto/'
-fetch('http://localhost/produto/', {
-    method: 'get',
-    headers: {
+<!-- Menu Toggle Script -->
+<script>
+  $("#menu-toggle").click(function (e) {
+    e.preventDefault();
+    $("#wrapper").toggleClass("toggled");
+  });
+var json = [];
+  function adicionar() {
+    // adicionar o id posto na url pra pegar o prod do banco
+    let divProd = document.getElementById('prod')
+    let divQuant = document.getElementById('quant')
+    let divValor = document.getElementById('valor')
+    let id = document.getElementById('pesq').value
+    console.log('Getting...');
+    let url = 'http://localhost/produto/' + id
+    console.log(url)
+    fetch(url, {
+      method: 'get',
+      headers: {
         'Content-Type': 'application/json'
-    },
-}).then(response => response.json())
-    .then(data => {
+      },
+    }).then(response => response.json())
+      .then(data => {
+        console.log(data)
+
+        data.forEach(element => {
+          let produto = element['nome']
+          divProd.innerHTML += `<br><span class="texto">${produto}<span>`
+          let qtd = document.getElementById('qtd').value
+          let valor = element['valor']
+          let valorTotal = valor * qtd
+          divValor.innerHTML += `<br><span class="texto">${valorTotal}<span>`
+          divQuant.innerHTML += `<br><span class="texto">${qtd}<span>`
+            let obj = {
+              'quantidade':qtd,
+              'produto_id':element['id']
+            }
+            json.push(obj)
+        });
+      });
+  }
+  function finalizar() {
+   /* let data = new Date();
+    let jsonObj = {
+      'dataHora': data
+    }
+    console.log('Posting...');
+    fetch('http://localhost/postVenda', {
+      method: 'post',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify(jsonObj)
+    }).then(function (response) {
+    })
+    let vendaId = 1;
+    fetch('http://localhost/getVendas', {
+      method: 'get',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+    }).then(response => response.json())
+      .then(data => {
         console.log(data)
         data.forEach(element => {
-    }
-  </script>
+          vendaId = element['id']
+        });
+      });
+      */
 
-</body>
+      fetch('http://localhost/postVendaItem', {
+        method: 'post',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(json)
+      }).then(function (response) {
+        res.send('fala fi')
+      })
+    }
+  }
+
+</script>
+
+
 
 </html>
