--- a/public/listProduto.html
+++ b/public/listProduto.html
@@ -215,6 +215,7 @@
           },
         }).then(response => response.json())
           .then(data => {
+            console.log(data)
             data.forEach(element => {
 
               let nome = element['nome']
