--- a/public/listProduto.html
+++ b/public/listProduto.html
@@ -197,7 +197,10 @@
     <!-- Menu Toggle Script -->
     <script>
       var o = 0;
-
+      $("#menu-toggle").click(function (e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+    });
 
 
       function listaTarefa() {
