--- a/public/listProduto.html
+++ b/public/listProduto.html
@@ -228,9 +228,9 @@
               divId.innerHTML += `<br><span class="texto">${id}<span>`
               divNome.innerHTML += `<br><span class="texto">${nome}<span>`
               divValor.innerHTML += `<br><span class="texto val">${f}<span>`
-              divEdit.innerHTML += `<br><a type='button' onclick="editar(${id,nome,valor})" href='/cadProduto/${id}'>edit<a>`
+              divEdit.innerHTML += `<br><a type='button' href='/cadProduto/${id}'>edit<a>`
                 console.log(id)
-              divDel.innerHTML += `<br><a type='button' onclick="excluir(${id})" href='#'>del</a>`
+              divDel.innerHTML += `<br><a type='button' onclick="excluir(${id})" >del</a>`
               
               /*
 <div class='bt'>
