--- a/public/listProduto.html
+++ b/public/listProduto.html
@@ -72,6 +72,8 @@
 
     .tabela {
       margin-top: 35px;
+      margin-bottom: 35px;
+      margin-left: 19px;
     }
 
     .titu {
@@ -163,9 +165,9 @@
       <div class="titu" id='titu'>
         <span>Histórico Produtos</span>
       </div>
-      <div class="container-fluid home">
+      <div class="container-fluid home row">
 
-        <div class='tabela'>
+        <div class='tabela row col-12'>
           <div id='id' class='id'>
             <span class='texto'>ID</span>
           </div>
