Não ta indo os baguio não sei porque

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,8 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/cadVenda">Nova venda</a>
           <a class="dropdown-item" href="/listVenda">Lista Venda</a>
+          <a class="dropdown-item" href="/vendas/grafico">Gráfico</a>
+        
         </div>
       </div>
 
