Grafico n rolo, n consegui setar os dados

--- a/public/graphVendas.html
+++ b/public/graphVendas.html
@@ -134,6 +134,7 @@
         function drawChart() {
             teste.push[dados]
             console.log(dados);
+            console.log('dsadsa');
             
             var data = google.visualization.arrayToDataTable(dados);
             /*var data = google.visualization.arrayToDataTable(dados);
