ainda ta faltando o gráfico mas o login ta top

--- a/public/graphVendas.html
+++ b/public/graphVendas.html
@@ -46,7 +46,7 @@
         <!-- Sidebar -->
         <div class="border-right bg" id="sidebar-wrapper">
             <div class="sidebar-heading">
-                <a href="/">Menu</a>
+                <a href="/home">Menu</a>
             </div>
             <div class="image">
                 <img src="/rato.png" alt="homem" width="200" height="180">
