--- a/public/Novoproduto.html
+++ b/public/Novoproduto.html
@@ -126,7 +126,7 @@
     <!-- Sidebar -->
     <div class="border-right bg" id="sidebar-wrapper">
       <div class="sidebar-heading">
-        <a href="/">Menu</a>
+        <a href="/home">Menu</a>
       </div>
       <div class="image">
         <img src="/rato.png" alt="homem" width="200" height="180">
@@ -264,23 +264,15 @@
             var x = document.getElementById("inserido");
             let y = document.getElementById('err')
             y.innerHTML = data.erro
-            // Add the "show" class to DIV
             x.className = "show";
-
-            // After 3 seconds, remove the show class from DIV
             setTimeout(function () { x.className = x.className.replace("show", ""); }, 3000);
             return;
 
           }
           
           var x = document.getElementById("snackbar");
-
-          // Add the "show" class to DIV
           x.className = "show";
-
-          // After 3 seconds, remove the show class from DIV
           setTimeout(function () { x.className = x.className.replace("show", ""); }, 3000);
-          //element.style.backgroundColor = "red";
 
         })
     }
