--- a/public/index.html
+++ b/public/index.html
@@ -2,119 +2,131 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Adicionar Compromisso </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: black
+        }
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+        #grad1 {
+            height: 680px;
+            ;
+            background-color: red;
+            /* For browsers that do not support gradients */
+            background-image: linear-gradient(#4c9de2, #d6dde4);
+            /* Standard syntax (must be last) */
+        }
 
-  <title>Simple Sidebar - Start Bootstrap Template</title>
+        .tarefa {
+            background: blue;
+            width: 15%;
+            height: 250px;
+            align-items: center;
+            margin-top: 15%;
+            background-image: linear-gradient(#4c9de2, #d6dde4);
+            background: black;
+        }
 
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        .form {
+            text-align: center;
+            padding-top: 5%;
+        }
 
-  <!-- Custom styles for this template -->
-  <link href="css/simple-sidebar.css" rel="stylesheet">
-  <style>
-    .border-right {
-      border-right: 1px solid black !important
-    }
+        .lbl {
+            font-size: 26px;
+            margin-top: 2px;
+            font-weight: bold;
+            color: white;
+        }
 
-    img {
-      border-radius: 50%;
-    }
-    a:hover {
-      color:black;
-      background-color: white;
-    }
-    .bg {
-    background-color: #19b7d0
-    }
-    .d-flex {
-      font-family: 'Courier New', Courier, monospace;
-    }
+        .salvar {
+            margin-top: 3%;
+            float: right;
+        }
 
-  </style>
+        .butao {
+            border-radius: 10px;
+            font-weight: bold;
+            display: inline-block;
+            text-align: center;
+            transition: all 1s;
+            cursor: pointer;
+            margin-top: 5%;
+        }
+
+        .msg {
+            text-align: center;
+            height: 50px;
+            width: 20%;
+            margin-top: 2%;
+            margin-left: 46.5%;
+            font-size: 24px;
+            visibility: hidden;
+            font-weight: bold;
+        }
+
+        .inp {
+            margin-top: 1%;
+        }
+    </style>
 </head>
 
-<body>
-
-  <div class="d-flex" id="wrapper">
-
-    <!-- Sidebar -->
-    <div class="border-right bg" id="sidebar-wrapper">
-      <div class="sidebar-heading">
-        <a href="/">Menu</a>
-      </div>
-      <div class="image">
-        <img src="rato.png" alt="homem" width="200" height="180">
-      </div>
-      <div class="list-group list-group-flush itens">
-          <div class="dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Vendas
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/cadVenda">Nova venda</a>
-          <a class="dropdown-item" href="/listVenda">Lista Venda</a>
-          <a class="dropdown-item" href="/vendas/grafico">Gráfico</a>
-        
-        </div>
-      </div>
-
-        <!-- Mudar o id da navbra-->
-    <div class="dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarProduto" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Produtos
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProduto">
-          <a class="dropdown-item" href="/cadProduto">Novo Produto</a>
-          <a class="dropdown-item" href="/listProduto">Lista Produto</a>
-          <a class='dropdown-item' href="/topCinco">Relatório</a>
-          <a class='dropdown-item' href="/hori">alo</a>
-        </div>
-      </div>
+<body id="grad1">
+    <div class="tarefa container clearfix">
+        <form class="form" id="formulario">
+            <label class='lbl'>Login</label>
+            <input type="text" class='inp form-control' id="user" name="fname" placeholder='Usuário'><br>
+            <input type="password" class='inp form-control' id="senha" name="lname" placeholder='Senha'><br>
+            <button type="button" onclick="enviar()" class="btn btn-light salvar btn-sm butao">Enviar</button>
+        </form>
     </div>
-  </div>
-    <!-- /#sidebar-wrapper -->
-
-    <!-- Page Content -->
-    <div id="page-content-wrapper">
-
-      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-
-      </nav>
-
-      <div class="container-fluid home">
-        <h1>Bem-Vindo</h1>
-      </div>
-    </div>
-    <!-- /#page-content-wrapper -->
-
-  </div>
-  <!-- /#wrapper -->
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Menu Toggle Script -->
-  <script>
-    $("#menu-toggle").click(function (e) {
-      e.preventDefault();
-      $("#wrapper").toggleClass("toggled");
-    });
-  </script>
-
+    <div id="snackbar" class='snackbar'></span id='save'>Erro no usuário ou senha</span></div>
+    <div id="inserido" class='snackbar'><span id='err'>Erro no login</span></div>
 </body>
+<script>
+    function enviar() {
+        let user = document.getElementById('user').value
+        let senha = document.getElementById('senha').value
+        var boolean = true
+        fetch('http://localhost/logar', {
+            method: 'get',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+        }).then(response => response.json())
+            .then(data => {
+                data.forEach(element => {
+                    if (element.nome == user && element.senha == senha) {
+                        console.log('alo');
+                        window.location.href = 'http://localhost/home'
+                    } else {
+                        boolean = false;
+                    }
+                });
+                if (boolean == false) {
+                    var x = document.getElementById("snackbar");
+                    x.className = "show";
+                    setTimeout(function () { x.className = x.className.replace("show", ""); }, 3000);
+                }
+            })
+
+    }
+</script>
 
 </html>
