--- a/public/home.html
+++ b/public/home.html
@@ -57,8 +57,8 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/cadVenda">Nova venda</a>
-          <a class="dropdown-item" href="/listVenda">Lista Venda</a>
-          <a class="dropdown-item" href="/vendas/grafico">Gráfico</a>
+          <a class="dropdown-item" href="/listVenda">Histórico</a>
+          <a class="dropdown-item" href="/vendas/grafico">Gráfico Venda</a>
         
         </div>
       </div>
@@ -71,9 +71,8 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProduto">
           <a class="dropdown-item" href="/cadProduto">Novo Produto</a>
-          <a class="dropdown-item" href="/listProduto">Lista Produto</a>
-          <a class='dropdown-item' href="/topCinco">Relatório</a>
-          <a class='dropdown-item' href="/hori">alo</a>
+          <a class="dropdown-item" href="/listProduto">Histórico</a>
+          <a class='dropdown-item' href="/hori">Gráfico Produtos</a>
         </div>
       </div>
     </div>
@@ -96,7 +95,6 @@
 
       <div class="container-fluid home">
         <h1>Bem-Vindo</h1>
-        <div id="snackbar" class='snackbar'></span id='save'>Logado</span></div>
       </div>
     </div>
     <!-- /#page-content-wrapper -->
