--- a/public/Novoproduto.html
+++ b/public/Novoproduto.html
@@ -121,6 +121,7 @@
 
 <body onload="edit()">
 
+
   <div class="d-flex" id="wrapper">
 
     <!-- Sidebar -->
@@ -129,33 +130,36 @@
         <a href="/home">Menu</a>
       </div>
       <div class="image">
-        <img src="/rato.png" alt="homem" width="200" height="180">
+        <img src="rato.png" alt="homem" width="200" height="180">
       </div>
       <div class="list-group list-group-flush itens">
-        <div class="dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Vendas
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/cadVenda">Nova venda</a>
-            <a class="dropdown-item" href="/listVenda">Lista Venda</a>
-          </div>
+          <div class="dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          Vendas
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/cadVenda">Nova venda</a>
+          <a class="dropdown-item" href="/listVenda">Histórico</a>
+          <a class="dropdown-item" href="/vendas/grafico">Gráfico Venda</a>
+        
         </div>
+      </div>
 
         <!-- Mudar o id da navbra-->
-        <div class="dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarProduto" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Produtos
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProduto">
-            <a class="dropdown-item" href="/cadProduto">Novo Produto</a>
-            <a class="dropdown-item" href="/listProduto">Lista Produto</a>
-          </div>
+    <div class="dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarProduto" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          Produtos
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProduto">
+          <a class="dropdown-item" href="/cadProduto">Novo Produto</a>
+          <a class="dropdown-item" href="/listProduto">Histórico</a>
+          <a class='dropdown-item' href="/hori">Gráfico Produtos</a>
         </div>
       </div>
     </div>
+  </div>
     <!-- /#sidebar-wrapper -->
 
     <!-- Page Content -->
