--- a/public/home.html
+++ b/public/home.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Simple Sidebar - Start Bootstrap Template</title>
+  <title>Home</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -74,6 +74,7 @@
           <a class="dropdown-item" href="/listProduto">Histórico</a>
           <a class='dropdown-item' href="/hori">Gráfico Produtos</a>
         </div>
+        <a type='button' class='dropdown-item logout'  href='/'>Logout</a>
       </div>
     </div>
   </div>
