--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Adicionar Compromisso </title>
+    <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -25,7 +25,7 @@
         }
 
         #grad1 {
-            height: 680px;
+            height: 648px;
             ;
             background-color: red;
             /* For browsers that do not support gradients */
@@ -65,11 +65,15 @@
             font-weight: bold;
             display: inline-block;
             text-align: center;
-            transition: all 1s;
+            transition: all 0.4s;
             cursor: pointer;
             margin-top: 5%;
         }
-
+        .butao:hover {
+            border-color: black;
+            color:white;
+            background-color: #4c9de2
+        }
         .msg {
             text-align: center;
             height: 50px;
@@ -89,11 +93,11 @@
 
 <body id="grad1">
     <div class="tarefa container clearfix">
-        <form class="form" id="formulario">
+        <form class="form" id="formulario" autocomplete="off">
             <label class='lbl'>Login</label>
             <input type="text" class='inp form-control' id="user" name="fname" placeholder='Usuário'><br>
             <input type="password" class='inp form-control' id="senha" name="lname" placeholder='Senha'><br>
-            <button type="button" onclick="enviar()" class="btn btn-light salvar btn-sm butao">Enviar</button>
+            <button type="button" onclick="enviar()" class="btn btn-light salvar btn-sm butao">Login</button>
         </form>
     </div>
     <div id="snackbar" class='snackbar'></span id='save'>Erro no usuário ou senha</span></div>
